btn alignment fixes

--- a/src/Components/Investment/investmentComponent.scss
+++ b/src/Components/Investment/investmentComponent.scss
@@ -1,9 +1,8 @@
 @import '../../Styles/variables.scss';
 
-.steps-actions {
+.steps-actions-investment {
   display: flex;
   flex-direction: row-reverse;
-  margin-right: 1rem;
   justify-content: flex-start;
 }
 
